#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komorebi"
dynamic = ["version"]
description = "A tumblelog engine"
license = "MIT"
authors = [{ name = "Keith Gaughan", email = "keith@gaughan.ie" }]
requires-python = ">=3.9"
readme = "README.rst"
# The versions are pegged with FreeBSD
dependencies = [
  "flask==3.0.3",
  "flask-httpauth==4.8.0",
  "flask-wtf~=1.1.2",
  "wtforms==3.1.2",
  "markdown==3.5.2",
  "passlib==1.7.4",
  "itsdangerous==2.1.2",
]

[project.urls]
Source = "https://github.com/kgaughan/komorebi"

[tool.rye]
dev-dependencies = [
  "pytest>=8.2.2",
  "pytest-cov>=2.12.1",
  "mypy>=1.10.1",
  "types-markdown>=3.6.0.20240316",
  "types-passlib>=1.7.7.20240327",
]
universal = true
generate-hashes = true
managed = true

[tool.rye.scripts.devserver]
cmd = "flask --app komorebi --debug run"
env = { KOMOREBI_SETTINGS = "../dev/dev.cfg" }

[tool.rye.scripts.sri]
cmd = "flask --app komorebi sri"
env = { KOMOREBI_SETTINGS = "../dev/dev.cfg" }

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "test"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC002",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "PLR0913",
  "PLR2004",
  "PLW2901",
  "S310",
  "S317",
  "T201",
  "TID252",
  "UP006",
  "UP035",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src/komorebi --junitxml=tests/results.xml --cov-report html"
junit_logging = "out-err"
junit_family = "xunit2"

[tool.coverage.run]
branch = true
omit = ["src/komorebi/adjunct/*"]

[tool.hatch.version]
path = "src/komorebi/__init__.py"

[tool.mypy]
ignore_missing_imports = true
